--- a/codes/docker-compose.yml
+++ b/codes/docker-compose.yml
@@ -4,7 +4,9 @@ services:
     build:
       context: .
       args:
-        LANGS: ${LANGS_SDK}
+        # 设置需要安装的语言，使用空格隔开
+        # Set the languages to be installed, separated by spaces
+        LANGS: "python cpp csharp"
     image: hello-algo-code
     container_name: hello-algo-code
     stdin_open: true
