--- a/mkdocs-en.yml
+++ b/mkdocs-en.yml
@@ -4,7 +4,7 @@ INHERIT: mkdocs.yml
 # Project information
 site_name: Hello Algo
 site_url: https://www.hello-algo.com/en/
-site_description: "Data Structures and Algorithms: Animated Illutrations and Off-the-Shelf Code"
+site_description: "Data Structures and Algorithms Crash Course with Animated Illustrations and Off-the-Shelf Code"
 docs_dir: build/docs-en
 site_dir: site/en
 # Repository
