--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -9,7 +9,7 @@ site_dir: site
 repo_name: krahets/hello-algo
 repo_url: https://github.com/krahets/hello-algo
 edit_uri: tree/main/docs
-version: 1.0.0b6
+version: 1.0.0
 
 # Copyright
 copyright: Copyright &copy; 2022 - 2024 Krahets
