--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -46,16 +46,16 @@ theme:
   palette:
     - scheme: default
       primary: white
-      # accent: indigo
+      accent: teal
       toggle:
         icon: material/theme-light-dark
-        name: Switch to dark mode
+        name: 深色主题
     - scheme: slate
-      primary: grey
-      # accent: indigo
+      primary: black
+      accent: teal
       toggle:
         icon: material/theme-light-dark
-        name: Switch to light mode
+        name: 浅色主题
   font:
     text: Noto Sans SC
     code: Fira Code
