--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -49,13 +49,13 @@ theme:
       accent: teal
       toggle:
         icon: material/theme-light-dark
-        name: 深色主题
+        name: 深色模式
     - scheme: slate
       primary: black
       accent: teal
       toggle:
         icon: material/theme-light-dark
-        name: 浅色主题
+        name: 浅色模式
   font:
     text: Noto Sans SC
     code: Fira Code
