--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -287,7 +287,9 @@ nav:
     - chapter_appendix/index.md
     - 16.1 &nbsp; 编程环境安装: chapter_appendix/installation.md
     - 16.2 &nbsp; 一起参与创作: chapter_appendix/contribution.md
-    # [status: new]
     - 16.3 &nbsp; 术语表: chapter_appendix/terminology.md
   - 参考文献:
     - chapter_reference/index.md
+  - 纸质书介绍:
+    # [status: new]
+    - chapter_paperbook/index.md
